# sbobinai

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  packages.txt  pyproject.toml
.github/workflows/: build.yml  docs.yml  release.yml
app/: style.py
app/model/: model.py
app/tabs/: record.py  upload.py
docker/: Dockerfile  start.sh
docs/: conf.py  index.rst  readme.md
settings/: config.py  constants.py
test/: README.md
